--- a/charts/elastic-cluster/templates/kibana.yml
+++ b/charts/elastic-cluster/templates/kibana.yml
@@ -1,7 +1,8 @@
 apiVersion: kibana.k8s.elastic.co/v1
 kind: Kibana
 metadata:
-  name: kibana
+  name: {{ .Release.Name}}
+  namespace: {{ .Release.Namespace }}
 spec:
   version: {{ .Values.elastic.version}}
   count: 1
