--- a/clusters/dev/cluster03/kustomization.yaml
+++ b/clusters/dev/cluster03/kustomization.yaml
@@ -1,7 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - cluster02/
-  - cluster03/
-  - cluster04/
+  - release.yaml
   
