--- a/infrastructure/kustomization.yaml
+++ b/infrastructure/kustomization.yaml
@@ -1,8 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 metadata:
-  name: clusters
+  name: infrastructure
   namespace: flux-system
 resources:
-  - infrastructure/
-  - clusters/dev/
+  - crds/
+  - operators/
+  - observability/
