--- a/charts/elastic-cluster/templates/elastic.yaml
+++ b/charts/elastic-cluster/templates/elastic.yaml
@@ -12,16 +12,26 @@ spec:
       node.roles: ['master']
       node.store.allow_mmap: false
 
+{{ if gt ( .Values.data.nodeset.count |toString|atoi) 0 }}
   - name: data
     count: {{ .Values.data.nodeset.count}}
     config:
       node.roles: ['data']
       node.store.allow_mmap: false      
+{{ end }}      
 
 {{ if gt ( .Values.datahot.nodeset.count |toString|atoi) 0 }}
   - name: datahot
     count: {{ .Values.datahot.nodeset.count}}
     config:
       node.roles: ['data_hot']
+      node.store.allow_mmap: false            
+{{ end }}      
+
+{{ if gt ( .Values.ingest.nodeset.count |toString|atoi) 0 }}
+  - name: datahot
+    count: {{ .Values.ingest.nodeset.count}}
+    config:
+      node.roles: ['ingest']
       node.store.allow_mmap: false            
 {{ end }}      
