--- a/charts/elastic-cluster/templates/elastic.yaml
+++ b/charts/elastic-cluster/templates/elastic.yaml
@@ -38,4 +38,8 @@ spec:
     config:
       node.roles: ['ingest']
       node.store.allow_mmap: false            
+    podTemplate:
+      spec:
+        nodeSelector:
+          org.myorg.node-type/compute: "true"   
 {{ end }}      
