--- a/charts/elastic-cluster/templates/kibana.yml
+++ b/charts/elastic-cluster/templates/kibana.yml
@@ -8,9 +8,14 @@ spec:
   count: 1
   elasticsearchRef:
     name: {{ .Release.Name }}
+  securityContext:
+    runAsNonRoot: true
+    fsGroup: 1000
+    runAsUser: 1000
   config:
     monitoring:
       ui:
         ccs:
           enabled: false
+        
             
