--- a/charts/elastic-cluster/templates/elastic.yaml
+++ b/charts/elastic-cluster/templates/elastic.yaml
@@ -1,11 +1,5 @@
 # trying yaml anchors
 
-x-securityContext: &ya_securityContext
-        securityContext: 
-          runAsUser: 1000
-          fsGroup: 1000
-          runAsNonRoot: true
-
 
 apiVersion: elasticsearch.k8s.elastic.co/v1
 kind: Elasticsearch
@@ -14,18 +8,8 @@ metadata:
   namespace: {{ .Release.Namespace }}  
 spec:
   version: {{ .Values.elastic.version }}
-  nodeSets:
-  - name: master
-    count: {{ .Values.master.nodeset.count}}
-    config:
-      node.roles: ['master']
-      node.store.allow_mmap: false
-    podTemplate:
-      spec:
-        nodeSelector:
-          org.myorg.node-type/compute: "true"
 
-        securityContext: *ya_securityContext
+  nodeSets:
 
 
 {{ if gt ( .Values.data.nodeset.count |toString|atoi) 0 }}
@@ -37,8 +21,26 @@ spec:
     podTemplate:
       spec:
 
-        securityContext: *ya_securityContext
+        securityContext: &ya_securityContext
+          runAsUser: 1000
+          fsGroup: 1000
+          runAsNonRoot: true
 {{ end }}      
+
+{{ if gt ( .Values.data.nodeset.count |toString|atoi) 0 }}
+  - name: master
+    count: {{ .Values.master.nodeset.count}}
+    config:
+      node.roles: ['master']
+      node.store.allow_mmap: false
+    podTemplate:
+      spec:
+        nodeSelector:
+          org.myorg.node-type/compute: "true"
+
+        securityContext: *ya_securityContext
+{{ end }}
+
 
 {{ if gt ( .Values.datahot.nodeset.count |toString|atoi) 0 }}
   - name: datahot
