--- a/charts/elastic-cluster/templates/es-ingress.yaml
+++ b/charts/elastic-cluster/templates/es-ingress.yaml
@@ -10,8 +10,7 @@ spec:
   - host: {{ .Release.Name}}-es
     http:
       paths: 
-      - host: elasticsearch
-        path: /
+      - path: /
         backend:
           service:
             name: {{ .Release.Name}}-es-http
