--- a/charts/elastic-cluster/templates/kb-ingress.yaml
+++ b/charts/elastic-cluster/templates/kb-ingress.yaml
@@ -10,7 +10,7 @@ spec:
   - host: {{ .Release.Name}}-kb
   - http:
       paths: 
-        path: /
+      - path: /
         backend:
           service:
             name: {{ .Release.Name}}-kb-http
