--- a/charts/elastic-cluster/templates/elastic.yaml
+++ b/charts/elastic-cluster/templates/elastic.yaml
@@ -20,6 +20,21 @@ spec:
     config:
       node.roles: ['master']
       node.store.allow_mmap: false
+      xpack.security.authc.realms.oidc.myrealm:
+        order: 2
+        rp.client_id: "the_client_id"
+        rp.response_type: code
+        rp.redirect_uri: "https://kibana.example.org:5601/api/security/oidc/callback"
+        op.issuer: "https://op.example.org"
+        op.authorization_endpoint: "https://op.example.org/oauth2/v1/authorize"
+        op.token_endpoint: "https://op.example.org/oauth2/v1/token"
+        op.jwkset_path: oidc/jwkset.json
+        op.userinfo_endpoint: "https://op.example.org/oauth2/v1/userinfo"
+        op.endsession_endpoint: "https://op.example.org/oauth2/v1/logout"
+        rp.post_logout_redirect_uri: "https://kibana.example.org:5601/security/logged_out"
+        claims.principal: sub
+        claims.groups: "http://example.info/claims/groups"
+
     podTemplate:
       spec:
         nodeSelector:
@@ -50,6 +65,20 @@ spec:
     config:
       node.roles: ['data']
       node.store.allow_mmap: false      
+      xpack.security.authc.realms.oidc.myrealm:
+        order: 2
+        rp.client_id: "the_client_id"
+        rp.response_type: code
+        rp.redirect_uri: "https://kibana.example.org:5601/api/security/oidc/callback"
+        op.issuer: "https://op.example.org"
+        op.authorization_endpoint: "https://op.example.org/oauth2/v1/authorize"
+        op.token_endpoint: "https://op.example.org/oauth2/v1/token"
+        op.jwkset_path: oidc/jwkset.json
+        op.userinfo_endpoint: "https://op.example.org/oauth2/v1/userinfo"
+        op.endsession_endpoint: "https://op.example.org/oauth2/v1/logout"
+        rp.post_logout_redirect_uri: "https://kibana.example.org:5601/security/logged_out"
+        claims.principal: sub
+        claims.groups: "http://example.info/claims/groups"
     podTemplate:
       spec:
 
@@ -70,6 +99,20 @@ spec:
     config:
       node.roles: ['data_hot','data_content']
       node.store.allow_mmap: false            
+      xpack.security.authc.realms.oidc.myrealm:
+        order: 2
+        rp.client_id: "the_client_id"
+        rp.response_type: code
+        rp.redirect_uri: "https://kibana.example.org:5601/api/security/oidc/callback"
+        op.issuer: "https://op.example.org"
+        op.authorization_endpoint: "https://op.example.org/oauth2/v1/authorize"
+        op.token_endpoint: "https://op.example.org/oauth2/v1/token"
+        op.jwkset_path: oidc/jwkset.json
+        op.userinfo_endpoint: "https://op.example.org/oauth2/v1/userinfo"
+        op.endsession_endpoint: "https://op.example.org/oauth2/v1/logout"
+        rp.post_logout_redirect_uri: "https://kibana.example.org:5601/security/logged_out"
+        claims.principal: sub
+        claims.groups: "http://example.info/claims/groups"
     podTemplate:
       spec:
 
@@ -88,6 +131,20 @@ spec:
     config:
       node.roles: ['ingest']
       node.store.allow_mmap: false            
+      xpack.security.authc.realms.oidc.myrealm:
+        order: 2
+        rp.client_id: "the_client_id"
+        rp.response_type: code
+        rp.redirect_uri: "https://kibana.example.org:5601/api/security/oidc/callback"
+        op.issuer: "https://op.example.org"
+        op.authorization_endpoint: "https://op.example.org/oauth2/v1/authorize"
+        op.token_endpoint: "https://op.example.org/oauth2/v1/token"
+        op.jwkset_path: oidc/jwkset.json
+        op.userinfo_endpoint: "https://op.example.org/oauth2/v1/userinfo"
+        op.endsession_endpoint: "https://op.example.org/oauth2/v1/logout"
+        rp.post_logout_redirect_uri: "https://kibana.example.org:5601/security/logged_out"
+        claims.principal: sub
+        claims.groups: "http://example.info/claims/groups"
     podTemplate:
       spec:
 
