--- a/charts/elastic-cluster/templates/elastic.yaml
+++ b/charts/elastic-cluster/templates/elastic.yaml
@@ -31,6 +31,7 @@ spec:
         op.issuer: "https://op.example.org"
         op.authorization_endpoint: "https://op.example.org/oauth2/v1/authorize"
         op.token_endpoint: "https://op.example.org/oauth2/v1/token"
+        op.jwkset_path: "https://login.microsoftonline.com/3232323-5566-3333-123456789012/discovery/v2.0/keys" 
         op.userinfo_endpoint: "https://op.example.org/oauth2/v1/userinfo"
         op.endsession_endpoint: "https://op.example.org/oauth2/v1/logout"
         rp.post_logout_redirect_uri: "https://kibana.example.org:5601/security/logged_out"
@@ -78,6 +79,7 @@ spec:
         op.issuer: "https://op.example.org"
         op.authorization_endpoint: "https://op.example.org/oauth2/v1/authorize"
         op.token_endpoint: "https://op.example.org/oauth2/v1/token"
+        op.jwkset_path: "https://login.microsoftonline.com/3232323-5566-3333-123456789012/discovery/v2.0/keys" 
         op.userinfo_endpoint: "https://op.example.org/oauth2/v1/userinfo"
         op.endsession_endpoint: "https://op.example.org/oauth2/v1/logout"
         rp.post_logout_redirect_uri: "https://kibana.example.org:5601/security/logged_out"
@@ -112,9 +114,9 @@ spec:
         rp.response_type: code
         rp.redirect_uri: "https://kibana.example.org:5601/api/security/oidc/callback"
         op.issuer: "https://op.example.org"
+        op.jwkset_path: "https://login.microsoftonline.com/3232323-5566-3333-123456789012/discovery/v2.0/keys" 
         op.authorization_endpoint: "https://op.example.org/oauth2/v1/authorize"
         op.token_endpoint: "https://op.example.org/oauth2/v1/token"
-        op.jwkset_path: oidc/jwkset.json
         op.userinfo_endpoint: "https://op.example.org/oauth2/v1/userinfo"
         op.endsession_endpoint: "https://op.example.org/oauth2/v1/logout"
         rp.post_logout_redirect_uri: "https://kibana.example.org:5601/security/logged_out"
@@ -149,6 +151,7 @@ spec:
         op.issuer: "https://op.example.org"
         op.authorization_endpoint: "https://op.example.org/oauth2/v1/authorize"
         op.token_endpoint: "https://op.example.org/oauth2/v1/token"
+        op.jwkset_path: "https://login.microsoftonline.com/3232323-5566-3333-123456789012/discovery/v2.0/keys" 
         op.userinfo_endpoint: "https://op.example.org/oauth2/v1/userinfo"
         op.endsession_endpoint: "https://op.example.org/oauth2/v1/logout"
         rp.post_logout_redirect_uri: "https://kibana.example.org:5601/security/logged_out"
