--- a/charts/elastic-cluster/templates/role2.yaml
+++ b/charts/elastic-cluster/templates/role2.yaml
@@ -7,4 +7,14 @@ metadata:
 spec:
   name: role2
   cluster: {{ .Release.Name}}
+  body: |
+    {
+      'cluster': ['all'],
+      'indices': [
+          {
+            'names': [ 'index2-*' ],
+            'privileges': ['all']
+          }
+      ]
+    }  
 {{ end }}
