--- a/charts/elastic-cluster/templates/clustersetting-recovery.yaml
+++ b/charts/elastic-cluster/templates/clustersetting-recovery.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: observability
 spec:
   name: recovery
-  cluster: {{ Release.name}}
+  cluster: {{ Release.Name}}
   body: |
             {
               "persistent" : {
