--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -20,6 +20,9 @@ spec:
     elastic:
       version: 8.1.1
 
+    indextemplates:
+      myindextemplate: true
+
     clustersettings:
       recovery: true
       monitoring: true
