winlogbeat index template

--- a/charts/elastic-cluster/values.yaml
+++ b/charts/elastic-cluster/values.yaml
@@ -37,4 +37,5 @@ clustersettings:
   monitoring: false
 
 indextemplates:
-  myindextemplate: false  
+  myindextemplate: false
+  winlogbeat: false  
