--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -37,7 +37,8 @@ spec:
       filebeat: true
 
     kibanaspaces:
-      metricbeat: false
+      metricbeat: true
+      winlogbeat: true
 
     master:
       nodeset: 
