--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -37,7 +37,7 @@ spec:
       filebeat: true
 
     kibanaspaces:
-      metricbeat: true
+      metricbeat: false
       winlogbeat: true
 
     master:
