--- a/charts/elastic-cluster/templates/clustersetting-monitoring.yaml
+++ b/charts/elastic-cluster/templates/clustersetting-monitoring.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   name: monitoring
   cluster: {{ .Release.Name}}
-  bodyInstall: |
+  body: |
         {
           "persistent" : {
             "xpack" : {
