--- a/charts/elastic-cluster/templates/clustersetting-recovery.yaml
+++ b/charts/elastic-cluster/templates/clustersetting-recovery.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   name: recovery
   cluster: {{ .Release.Name}}
-  bodyInstall: |
+  body: |
             {
               "persistent" : {
                 "indices.recovery.max_bytes_per_sec" : "50mb"
