--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -26,7 +26,7 @@ spec:
 
     clustersettings:
       recovery: true
-      monitoring: true
+      monitoring: false
 
     roles: 
       role3: False 
