--- a/charts/elastic-cluster/templates/ingestpipeline-mypipeline.yaml
+++ b/charts/elastic-cluster/templates/ingestpipeline-mypipeline.yaml
@@ -15,7 +15,7 @@ spec:
                 "set" : {
                   "description" : "My optional processor description",
                   "field": "my-keyword-field",
-                  "value": "foo"
+                  "value": "foonew"
                 }
               }
             ]
