--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -21,7 +21,7 @@ spec:
       version: 8.1.1
 
     ingestpipelines:
-      mypipeline: false
+      mypipeline: true
 
     indextemplates:
       myindextemplate: true
