--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -21,15 +21,15 @@ spec:
       version: 8.1.1
 
     ingestpipelines:
-      mypipeline: true
+      mypipeline: false
 
     indextemplates:
       myindextemplate: true
       winlogbeat: true
 
     clustersettings:
-      recovery: true
-      monitoring: false
+      recovery: false
+      monitoring: true
 
     roles: 
       role3: False 
