--- a/charts/elastic-cluster/templates/role4.yaml
+++ b/charts/elastic-cluster/templates/role4.yaml
@@ -5,7 +5,7 @@ metadata:
   name: role4
   namespace: observability
 spec:
-  name: role4
+  name: {{ .Release.Name}}-role-role4
   cluster: {{ .Release.Name}}
   body: |
     {
