--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -51,7 +51,7 @@ spec:
     kibanaspaces:
       metricbeat: true
       winlogbeat: false
-      rally: true
+      rally: false
 
     master:
       nodeset: 
