--- a/charts/elastic-cluster/templates/slm-mypolicy.yaml
+++ b/charts/elastic-cluster/templates/slm-mypolicy.yaml
@@ -11,7 +11,7 @@ spec:
           {
             "schedule": "0 30 1 * * ?", 
             "name": "<daily-snap-{now/d}>", 
-            "repository": "my_repository", 
+            "repository": "myrepo", 
             "config": { 
               "indices": ["data-*", "important"], 
               "ignore_unavailable": false,
